deps/v8/test/message/fail/call-yield.out
*%(basename)s:6: TypeError: yield is not a function
  yield()
  ^
TypeError: yield is not a function
    at f (*%(basename)s:6:3)
    at *%(basename)s:8:1
